fixed nav on mobile

--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@
       position: absolute;
       bottom: 0; left: 0; right: 0;
       height: 120px;
-      background-image: url('imgs/mountains.jpg');
+      background-image: url('../imgs/mountains.jpg');
       background-size: cover;
       background-position: center;
       opacity: 0.35;
